# azmocks

./: .gitignore  Cargo.toml
azurite/: deployment.yml  service.yml
mock-keyvault/: Cargo.toml
mock-keyvault/src/: main.rs
mock-keyvault/src/handlers/: authorize.rs  mod.rs  secrets.rs
src/: main.rs
