[package]
name = "azmocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { version = "0.2.1", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_storage = { version = "0.1.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_storage_blobs = { version = "0.1.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
