[package]
name = "mock-keyvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.14", features = ["static-files", "rustls"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136" }
serde_json = "1.0"
tracing-subscriber = "0.3.9"
thiserror = "1.0.30"
tracing = "0.1.34"
logos = "0.12.0"
